[dash] hook up type and interval views to bootstrap buttons

--- a/drupal/modules/dash/tpl/dash.html
+++ b/drupal/modules/dash/tpl/dash.html
@@ -1,20 +1,20 @@
 <div class="row">
     <div class="span3">
-        <div class="btn-group" data-toggle="buttons-radio">
-            <button class="btn">Electricity</button>
-            <button class="btn">Gas</button>
-            <button class="btn">Water</button>
+        <div id="type" class="btn-group" data-toggle="buttons-radio">
+            <button class="btn" id="electricity">Electricity</button>
+            <button class="btn" id="gas">Gas</button>
+            <button class="btn" id="water">Water</button>
         </div> 
     </div>
 
     <div class="span5">
-        <div class="btn-group" data-toggle="buttons-radio">
-            <button class="btn">Minute</button>
-            <button class="btn">Hour</button>
-            <button class="btn">Day</button>
-            <button class="btn">Month</button>
-            <button class="btn">Year</button>
-            <button class="btn">Night</button>
+        <div id="interval" class="btn-group" data-toggle="buttons-radio">
+            <button class="btn" id="minute">Minute</button>
+            <button class="btn" id="hour">Hour</button>
+            <button class="btn" id="day">Day</button>
+            <button class="btn" id="month">Month</button>
+            <button class="btn" id="year">Year</button>
+            <button class="btn" id="night">Night</button>
         </div> 
     </div>
 
