--- a/drupal/modules/dash/tpl/dash.html
+++ b/drupal/modules/dash/tpl/dash.html
@@ -20,15 +20,17 @@
 
     <div class="span2">
         <div class="btn-group" style="float:right">
-            <a class="btn" href="#">Unit</a>
-                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+            <button class="btn">Unit</button>
+                <button class="btn dropdown-toggle" data-toggle="dropdown">
                     <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                <!-- dropdown menu links -->
-                    <li>watt</li>
-                    <li>kWh per day</li>
-                    <li>kWh per year</li>
+                </button>
+                <ul id="unit" class="dropdown-menu pull-right">
+                    <li><a href="#" class="electricity" id="watt">watt</a></li>
+                    <li><a href="#" class="electricity" id="kwhperyear">kWh/year</a></li>
+                    <li><a href="#" class="gas water" id="lpermin">l/min</a></li>
+                    <li><a href="#" class="gas water" id="lperday">l/day</a></li>
+                    <li><a href="#" class="gas water" id="m3peryear">m3/year</a></li>
+                    <!--li><a href="#" class="electricity gas water" id="eurperyear">eur/year</a></li-->
                 </ul>
         </div>
     </div>
