--- a/drupal/modules/dash/tpl/dash.html
+++ b/drupal/modules/dash/tpl/dash.html
@@ -27,11 +27,12 @@
                 <ul id="unit" class="dropdown-menu pull-right">
                     <li><a href="#" class="electricity" id="watt">watt</a></li>
                     <li><a href="#" class="electricity" id="kwhperyear">kWh/year</a></li>
-                    <li><a href="#" class="electricity" id="wh">Wh</a></li>
-                    <li><a href="#" class="electricity cumul" id="wh">Wh [cumulative]</a></li>
                     <li><a href="#" class="gas water" id="lpermin">l/min</a></li>
                     <li><a href="#" class="gas water" id="lperday">l/day</a></li>
                     <li><a href="#" class="gas water" id="m3peryear">m3/year</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#" class="electricity" id="wh">Wh</a></li>
+                    <li><a href="#" class="electricity cumul" id="wh">Wh [cumulative]</a></li>
                     <li><a href="#" class="gas water" id="liter">liter</a></li>
                     <li><a href="#" class="gas water cumul" id="liter">liter [cumulative]</a></li>
                     <!--li><a href="#" class="electricity gas water" id="eurperyear">eur/year</a></li-->
