[dash] real-time charts need a separate logic

--- a/drupal/modules/dash/tpl/dash.html
+++ b/drupal/modules/dash/tpl/dash.html
@@ -30,10 +30,10 @@
                     <span class="caret"></span>
                 </button>
                 <ul id="unit" class="dropdown-menu pull-right">
-                    <li><a href="#" class="electricity" id="watt">watt</a></li>
+                    <li><a href="#" class="electricity rt" id="watt">watt</a></li>
                     <li><a href="#" class="electricity" id="kwhperyear">kWh/year</a></li>
                     <li><a href="#" class="gas water" id="lpermin">l/min</a></li>
-                    <li><a href="#" class="gas water" id="lperday">l/day</a></li>
+                    <li><a href="#" class="gas water rt" id="lperday">l/day</a></li>
                     <li><a href="#" class="gas water" id="m3peryear">m3/year</a></li>
                     <li class="divider"></li>
                     <li><a href="#" class="electricity" id="wh">Wh</a></li>
