[dash] improve error string

--- a/drupal/modules/dash/tpl/dash.html
+++ b/drupal/modules/dash/tpl/dash.html
@@ -55,7 +55,7 @@
 <script type="text/template" id="alert-no-sensor">
     <div class="alert alert-error">
         <a class="close" data-dismiss="alert">×</a>
-        <strong>Error - </strong> No <%= type %> sensors to display. Please select another type.
+        <strong>Error - </strong> No <%= type %> sensors to display. Please select another sensor type.
     </div>
 </script>
 
