[dash] catch rt request timeouts

--- a/drupal/modules/dash/tpl/dash.html
+++ b/drupal/modules/dash/tpl/dash.html
@@ -65,3 +65,10 @@
         <strong>Error - </strong> Real-time charting is not available on this Fluksometer. If you have an FLM02, then please upgrade to the latest firmware release on the my account -> devices page.
     </div>
 </script>
+
+<script type="text/template" id="alert-timeout-rt">
+    <div class="alert alert-error">
+        <a class="close" data-dismiss="alert">×</a>
+        <strong>Error - </strong> The call for sensor <%= func %> experienced a timeout. You are probably not in the same local network as the FLM.
+    </div>
+</script>
