[static + theme] fix webkit home-icon rendering on splash page

--- a/drupal/modules/static/tpl/splash.html
+++ b/drupal/modules/static/tpl/splash.html
@@ -3,7 +3,7 @@
 
     <p>&nbsp;</p>
 
-    <i class="icon-home" width="300" height="200" style="float: left; font-size: 200px; margin-top: 90px"></i>
+    <i class="icon-home" style="float: left; font-size: 200px; margin-top: 80px"></i>
 
     <p style="padding-left:340px;">Flukso is a web-based community metering application. Install a Fluksometer near your fuse box and you will be able to monitor, share and reduce your electricity consumption through this website.
         <br/><br/> <a class="btn btn-primary btn-large" href="/about">Learn more</a>
