[static/splash] fix typo

--- a/drupal/modules/static/tpl/splash.html
+++ b/drupal/modules/static/tpl/splash.html
@@ -22,7 +22,7 @@
     <div class="span4">
         <h2>Get It</h2>
 
-        <p>Purchase a Fluksometer and matching current clamps trough our web shop and you're all set to join the Flukso community. We ship to Europe, North America and a selection of other countries.<p/>
+        <p>Purchase a Fluksometer and matching current clamps through our web shop and you're all set to join the Flukso community. We ship to Europe, North America and a selection of other countries.<p/>
 
         <p><a class="btn" href="/shop">Buy</a></p>
     </div>
