[static] add warning to installation instructions

--- a/drupal/modules/static/tpl/install.html
+++ b/drupal/modules/static/tpl/install.html
@@ -30,7 +30,8 @@
         <p>&nbsp;</p>
         <div class="clearfix">
             <img src="https://www.flukso.net/sites/default/files/images/step3.png"/>
-            <p>For safety reasons, switch off the main electricity supply. Attach a current clamp to each of the live wires running from the electricity meter to the fuse box. Close the clamp firmly. You should hear a double click. The lip should lie flush with the clamp's body.</p>
+            <p>For safety reasons, switch off the main electricity supply. Within the fuse box, attach a current clamp to each of the live wires running from the electricity meter. Close the clamp firmly. You should hear a double click. The lip should lie flush with the clamp's body.</p>
+            <p><strong>For safety reasons, the live wire should be fully insulated. Never attach the clamp to a non-insulated live wire!</strong></p>
         </div>
     </div>
 </div>
