[theme] adapt install page to be responsive

--- a/drupal/modules/static/tpl/install.html
+++ b/drupal/modules/static/tpl/install.html
@@ -1,5 +1,5 @@
 <div id="install-download" class="row">
-    <a class="btn btn-large btn-success" href="/files/flm02/manual.pdf">Download the Fluksometer Manual</a>
+    <a class="btn btn-large btn-success" href="/files/flm02/manual.pdf">Download Manual</a>
 </div>
 
 <div id="install-step" class="row">
