[theme] make splash page responsive

--- a/drupal/modules/static/tpl/splash.html
+++ b/drupal/modules/static/tpl/splash.html
@@ -1,14 +1,11 @@
-<div class="hero-unit" style="height:260px;">
-    <h1>Greetings!</h1>
+<div class="hero-unit">
+    <h1>Flukso</h1>
 
     <p>&nbsp;</p>
 
-    <i class="icon-home" style="float: left; font-size: 200px; margin-top: 80px"></i>
+    <p>Flukso is a web-based community metering application. Install a Fluksometer near your fuse box and you will be able to monitor, share and reduce your electricity consumption through this website.</p>
 
-    <p style="padding-left:340px;">Flukso is a web-based community metering application. Install a Fluksometer near your fuse box and you will be able to monitor, share and reduce your electricity consumption through this website.
-        <br/><br/> <a class="btn btn-primary btn-large" href="/about">Learn more</a>
-    </p>
-
+    <p><a class="btn btn-primary btn-large" href="/about">Learn more</a></p>
 </div>
 
 <div class="row">
