[dash] fix typos in html file

--- a/drupal/modules/dash/tpl/dash.html
+++ b/drupal/modules/dash/tpl/dash.html
@@ -68,10 +68,10 @@
             <ul id="interval" class="dropdown-menu">
                 <li><a href="#" id="minute">minute</a></li>
                 <li><a href="#" id="hour">hour</a></li>
-                <li><a href="#" id="dayr">day</a></li>
+                <li><a href="#" id="day">day</a></li>
                 <li><a href="#" id="month">month</a></li>
                 <li><a href="#" id="year">year</a></li>
-                <li><a href="#" id="nught">night</a></li>
+                <li><a href="#" id="night">night</a></li>
            </ul>
         </div> 
 
