--- a/drupal/modules/dash/tpl/dash.html
+++ b/drupal/modules/dash/tpl/dash.html
@@ -47,7 +47,7 @@
 </div-->
 
 <div class="row">
-    <div class="btn-toolbar">
+    <div class="span10 btn-toolbar">
         <div class="btn-group">
             <button class="btn btn-large dropdown-toggle" data-toggle="dropdown">
                 Type
@@ -102,6 +102,23 @@
         <div id="chart"></div>
     </div>
 </div>
+
+<div class="row">
+    <div id="fluksonians" class="span10">
+    </div>
+</div>
+<div class="row">
+    <div class="span10 input-append">
+        <input type="text" id ="fluksonian-add" class="span2" placeholder="Add a Fluksonian" data-provide="typeahead">
+    </div> 
+</div>
+
+
+<script type="text/template" id="avatar-add">
+    <div class= "avatar">
+        <img title="<%= name %>" uid="<%= uid %>" src="<%= avatar %>">
+    </div>
+</script>
 
 <script type="text/template" id="alert-no-sensor">
     <div class="alert alert-error">
