[dash] add fluksonian show/remove buttons

--- a/drupal/modules/dash/tpl/dash.html
+++ b/drupal/modules/dash/tpl/dash.html
@@ -107,9 +107,12 @@
     <div id="fluksonians" class="span10">
     </div>
 </div>
+
 <div class="row">
-    <div class="span10 input-append">
-        <input type="text" id ="fluksonian-add" class="span2" placeholder="Add a Fluksonian" data-provide="typeahead">
+    <div id="fluksonian-ctrl" class="span10 btn-group" data-toggle="buttons-radio">
+        <button class="btn" id="fluksonian-show">Show</button>
+        <button class="btn" id="fluksonian-remove">Remove</button>
+        <input type="text" id="fluksonian-add" class="input-medium" placeholder="Add a Fluksonian" data-provide="typeahead">
     </div> 
 </div>
 
