[static] fix typo

--- a/drupal/modules/static/tpl/install.html
+++ b/drupal/modules/static/tpl/install.html
@@ -34,7 +34,7 @@
 </div>
 <div class="install-step row">
     <div class="well">
-        <h4>Step 4: Connecting the clamp's snsor cable</h4>
+        <h4>Step 4: Connecting the clamp's sensor cable</h4>
         <div class="clearfix">
             <img src="https://www.flukso.net/sites/default/files/images/step4.png"/>
             <p>Connect the cable from the current clamp to one of the FLM's analog input ports. Take care of connecting the black and red cable as shown in the drawing on the left.</p>
