[dash] IE9 does not like 'type' as an HTML attribute

--- a/drupal/modules/dash/tpl/dash.html
+++ b/drupal/modules/dash/tpl/dash.html
@@ -6,9 +6,9 @@
 <div class="row visible-desktop">
     <div class="span3">
         <div menu="type" class="btn-group" data-toggle="buttons-radio">
-            <button class="btn" type="electricity">Electricity</button>
-            <button class="btn" type="gas">Gas</button>
-            <button class="btn" type="water">Water</button>
+            <button class="btn" typ="electricity">Electricity</button>
+            <button class="btn" typ="gas">Gas</button>
+            <button class="btn" typ="water">Water</button>
         </div> 
     </div>
 
@@ -54,9 +54,9 @@
                 <span class="caret"></span>
             </button>
             <ul menu="type" class="dropdown-menu">
-                <li><a href="#" type="electricity">electricity</a></li>
-                <li><a href="#" type="gas">gas</a></li>
-                <li><a href="#" type="water">water</a></li>
+                <li><a href="#" typ="electricity">electricity</a></li>
+                <li><a href="#" typ="gas">gas</a></li>
+                <li><a href="#" typ="water">water</a></li>
            </ul>
         </div> 
 
