[static] Fix typo in the about page. Thanks jgysenbergs!

--- a/drupal/modules/static/tpl/about.html
+++ b/drupal/modules/static/tpl/about.html
@@ -20,7 +20,7 @@
     <div class="well">
         <h3>What do I need?</h3>
         <div class="clearfix">
-            <p>You will need a either an ethernet or wifi network for the Fluksometer to connect to. And a power socket close to the fuse box.</p>
+            <p>You will need an ethernet or wifi network for the Fluksometer to connect to. And a power socket close to the fuse box.</p>
         </div>
     </div>
 </div>
