[static] update site content

--- a/drupal/modules/dash/tpl/dash.html
+++ b/drupal/modules/dash/tpl/dash.html
@@ -14,7 +14,7 @@
 
     <div class="span5">
         <div menu="interval" class="btn-group" data-toggle="buttons-radio">
-            <!-- button class="btn" interval="minute">Minute</button-->
+            <button class="btn" interval="minute">Minute</button>
             <button class="btn" interval="hour">Hour</button>
             <button class="btn" interval="day">Day</button>
             <button class="btn" interval="month">Month</button>
