--- a/drupal/modules/static/tpl/about.html
+++ b/drupal/modules/static/tpl/about.html
@@ -2,7 +2,7 @@
     <div class="well">
         <h3>What is Flukso?</h3>
         <div class="clearfix">
-            <p>Flukso is an <a href="https://www.github.com/flukso">open source</a> web-based community metering application. Flukso allows you to accurately monitor and reduce your household electricity consumption via this website. Do not be fooled to think that you have to spend your evenings sitting in the dark with only a small candle to light your home in order to have a low energy consumption pattern. Instead, a significant amount of savings can be achieved through improvements in energy efficiency. Comparing your electricity usage to your peers' will help trigger conversations on how to achieve this. We firmly concur with the statement that energy efficiency is the best type of alternative energy.</p>
+            <p>Flukso is an <a href="https://www.github.com/flukso">open source</a> web-based community metering application. Flukso allows you to accurately monitor and reduce your electricity, water and gas consumption via this website. Do not be fooled to think that you have to spend your evenings sitting in the dark with only a small candle to light your home in order to have a low energy consumption pattern. Instead, a significant amount of savings can be achieved through improvements in energy efficiency. Comparing your electricity usage to your peers' will help trigger conversations on how to achieve this. We firmly concur with the statement that energy efficiency is the best type of alternative energy.</p>
         </div>
     </div>
 </div>
@@ -11,7 +11,7 @@
     <div class="well">
         <h3>How does it work?</h3>
         <div class="clearfix">
-            <p>In order to participate, you require a Fluksometer. You should <a href="https://www.flukso.net/installation">install</a> this device near your fuse box. It determines your total electricity consumption from a current clamp attached to one of the power cables. The Fluksometer also associates with your home ethernet or wifi network and reports the measurements at five minute intervals to the Flukso web server. Our server logs your data in a special round-robin database, which can be consulted via the web interface. When logged in, the website displays a personalised chart similar to the live chart shown on the <a href="/dash">dash page</a>. You're able to select different time scales, add or remove other Fluksonians' data sets to the chart and change the chart's unit. Flukso thus helps you visualise your household's energy streams.</p>
+            <p>In order to participate, you require a Fluksometer. You should <a href="https://www.flukso.net/installation">install</a> this device near your fuse box. It determines your total electricity consumption from a current clamp attached to one of the power cables. The Fluksometer also associates with your home ethernet or wifi network and reports the sensor readings at five minute intervals to the Flukso web server. The server stores the time series data, which can then be consulted via the web interface. When logged in, the website displays a personalised chart similar to the live chart shown on the <a href="/dash">dash page</a>. You're able to select different time scales, add or remove other Fluksonians' data sets to the chart and change the chart's unit. Flukso thus helps you visualise your household's energy streams.</p>
         </div>
     </div>
 </div>
@@ -29,8 +29,7 @@
     <div class="well">
         <h3>Where can I buy a Fluksometer?</h3>
         <div class="clearfix">
-            <p>You can purchase a Fluksometer from our <a href="https://www.flukso.net/shop">online store</a>. This includes a Fluksometer, cabling and unlimited access to the Flukso website. Depending on the number of phases, you will need to purchase one or three current clamps separately. We have to ship these boxes from Belgium. Shipping costs will vary depending on your location.</p>
-            <h6>Note:</h6><p>David Rowe is lending us a helping hand in distributing Fluksometers to Australia and New Zealand. Fluksometers tailored to AUS/NZ 240V power supplies can now be purchased directly from his <a href="http://www.rowetel.com/blog/?p=312">shop</a>. He has also written a comprehensive <a href="http://www.rowetel.com/blog/?p=135">blog post</a> on his Australian Flukso installation. Check it out!</p>
+            <p>You can purchase a Fluksometer from our <a href="https://www.flukso.net/shop">online store</a>. This includes a Fluksometer, cabling and unlimited access to the Flukso website. Depending on the number of phases, you will need to purchase one or three current clamps separately. We have to ship these boxes from Belgium to all EU countries. Shipping costs will vary depending on your location.</p>
         </div>
     </div>
 </div>
