--- a/drupal/modules/static/tpl/install.html
+++ b/drupal/modules/static/tpl/install.html
@@ -1,23 +1,23 @@
 <div id="install-download" class="row">
-    <a class="btn btn-large btn-success" href="/files/flm02/manual.pdf">Download Manual</a>
+    <a class="btn btn-large btn-success" href="https://icarus75.gitbooks.io/the-fluksometer-v3-manual/content">Take me to the Fluksometer Manual</a>
 </div>
 
 <div class="install-step row">
     <div class="well">
-        <h4>Step 1: Configuring wifi & sensors</h4>
+        <h4>Step 1: Securing the fluksometer</h4>
         <div class="clearfix">
-            <img src="https://www.flukso.net/sites/default/files/images/step1.png"/>
-            <p>Power up the FLM. Connect your computer to the FLM's ethernet port. Surf to <a href = 'http://192.168.255.1'>http://192.168.255.1</a>. Configure the wireless interface with the proper name and security key. The <a href = 'https://www.flukso.net/content/fluksometer-v2'>globe LED</a> should light up. Proceed to the sensor page and configure each of the ports you wish to use on the FLM.</p>
+            <img src="https://www.flukso.net/sites/default/files/images/step2.png"/>
+            <p>Disconnect all cables from the FLM. Find a suitable location near the fuse box to install the FLM. Secure the FLM with a plastic cable tie or or use the rear mounting holes to fix the Fluksometer to the wall.</p>
         </div>
     </div>
 </div>
 
 <div class="install-step row">
     <div class="well">
-        <h4>Step 2: Securing the fluksometer</h4>
+        <h4>Step 2: Connecting the clamp's sensor cable</h4>
         <div class="clearfix">
-            <img src="https://www.flukso.net/sites/default/files/images/step2.png"/>
-            <p>Disconnect all cables from the FLM. Find a suitable location near the fuse box to install the FLM. Secure the FLM with a plastic cable tie or by using the rear mounting holes.</p>
+            <img src="https://www.flukso.net/sites/default/files/images/step4.png"/>
+            <p>Connect the cable from the current clamp to one of the FLM's current clamp ports (ports 1,2 or 3). Take care of connecting the black and red cable as shown in the drawing on the left.</p>
         </div>
     </div>
 </div>
@@ -27,26 +27,28 @@
         <h4>Step 3: Attaching the current clamp</h4>
         <div class="clearfix">
             <img src="https://www.flukso.net/sites/default/files/images/step3.png"/>
-            <p>For safety reasons, switch off the main electricity supply. Within the fuse box, attach a current clamp to each of the live wires running from the electricity meter. Close the clamp firmly. You should hear a double click. The lip should lie flush with the clamp's body.</p>
+            <p>For safety reasons, switch off the main electricity supply. Within the fuse box, attach a current clamp to each of the live wires running from the electricity meter. Close the clamp firmly. You should hear a slight click. The lip should lie flush with the clamp's body.</p>
             <p><strong>For safety reasons, the live wire should be fully insulated. Never attach the clamp to a non-insulated live wire!</strong></p>
         </div>
     </div>
 </div>
+
 <div class="install-step row">
     <div class="well">
-        <h4>Step 4: Connecting the clamp's sensor cable</h4>
+        <h4>Step 4: Configuring wifi & ports</h4>
         <div class="clearfix">
-            <img src="https://www.flukso.net/sites/default/files/images/step4.png"/>
-            <p>Connect the cable from the current clamp to one of the FLM's analog input ports. Take care of connecting the black and red cable as shown in the drawing on the left.</p>
+            <img src="https://www.flukso.net/sites/default/files/images/step1.png"/>
+            <p>Switch the main electricity supply back on. Power up your FLM by connecting the power plug. Wait until a heartbeat is present on the heartbeat LED. Connect your computer to the FLM's LAN ethernet port. Surf to <a href = 'http://192.168.255.1'>http://192.168.255.1</a>. Sign in using the default user/password settings. On the network tab, select the proper wireless network and fill in the corresponding security key. The globe LED should light up within one minute. Proceed to the port page and configure each of the ports you wish to use on the FLM. For a proper configuration, make sure to set the correct electrical system, i.e. single-phase or 3-phase with(out) N. Before pressing the 'save' button, make sure PV-panels are temporarily disabled and that a sufficiently large electrical load is turned on.</p>
         </div>
     </div>
 </div>
+
 <div class="install-step row">
     <div class="well">
         <h4>Step 5: Powering up</h4>
         <div class="clearfix">
             <img src="https://www.flukso.net/sites/default/files/images/step5.png"/>
-            <p>Switch the main electricity supply back on. Activate your FLM by connecting the power plug. Visit <a href = 'https://www.flukso.net/user/register'>https://www.flukso.net/user/register</a> to create an account. Then click the My account -> devices tab to assign the FLM's serial to your account. A first reading will be visible on the hour chart within five minutes from powering up.</p>
+            <p>Visit <a href = 'https://www.flukso.net/user/register'>https://www.flukso.net/user/register</a> to create an account. Then click the My account -> devices tab to assign the FLM's serial to your account. A first reading will be visible on the dashboard within five minutes.</p>
         </div>
     </div>
 </div>
