--- a/drupal/modules/static/tpl/splash.html
+++ b/drupal/modules/static/tpl/splash.html
@@ -3,7 +3,7 @@
 
     <p>&nbsp;</p>
 
-    <p>Flukso is a web-based community metering application. Install a Fluksometer near your fuse box and you will be able to monitor, share and reduce your electricity consumption through this website.</p>
+    <p>Flukso is a web-based community metering application. Install a Fluksometer near your fuse box and you will be able to monitor, share and reduce your electricity, gas and water consumption through this website.</p>
 
     <p><a class="btn btn-primary btn-large" href="/about">Learn more</a></p>
 </div>
@@ -19,7 +19,7 @@
     <div class="span4">
         <h2>Get It</h2>
 
-        <p>Purchase a Fluksometer and matching current clamps through our web shop and you're all set to join the Flukso community. We ship to Europe, North America and a selection of other countries.<p/>
+        <p>Purchase a Fluksometer and matching current, water or gas probes through our web shop and you're all set to join the Flukso community. We currently ship to all EU countries.<p/>
 
         <p><a class="btn" href="/shop">Buy</a></p>
     </div>
