--- a/drupal/modules/dash/tpl/dash.html
+++ b/drupal/modules/dash/tpl/dash.html
@@ -116,6 +116,11 @@
     </div> 
 </div>
 
+<div class="row">
+   <div id="export-ctrl" class="span1" style="float:right">
+        <button class="btn" id="export">Export</button>
+   </div> 
+</div>
 
 <script type="text/template" id="avatar-add">
     <div class= "avatar">
