[install] link en and nl manuals to the installation page

--- a/drupal/modules/static/tpl/install.html
+++ b/drupal/modules/static/tpl/install.html
@@ -1,5 +1,6 @@
-<div id="install-download" class="row">
-    <a class="btn btn-large btn-success" href="https://icarus75.gitbooks.io/the-fluksometer-v3-manual/content">Take me to the Fluksometer Manual</a>
+<div id="install-manual" class="row">
+    <a class="btn btn-large btn-success" href="https://www.flukso.net/files/docs/en/index.html">Flukso Manual (EN)</a>
+    <a class="btn btn-large btn-success" href="https://www.flukso.net/files/docs/nl/index.html">Flukso Handleiding (NL)</a>
 </div>
 
 <div class="install-step row">
